<resources>
    <string name="app_name">Palisoc Shop</string>
    <string name="action_settings">Settings</string>
    <string name="shop_title">Rydel\'s \nRacing \nBikes</string>
    <string name="browse">Browse</string>
    <string name="instruct_msg">Welcome to Rydel\'s Mach Bikes! Browse through our catalog and
        order yourself a brand new bike, tailored and delivered, just for you</string>

    <string name="title_activity_menu">Menu Activity</string>

    <string name="item1_name">Mach Bike 2020</string>
    <string name="item1_price">599.98</string>
    <string name="item1_description">
        - 54 Cm Light Aluminum Frame more light for your cycling. \n
        - 16 Speed Shifting system ensure you to brakes for safety at any speed. \n
        - Double wall Aluminum Rims makes it more fashion.
    </string>

    <string name="item2_name">Acro 7200</string>
    <string name="item2_price">356.98</string>
    <string name="item2_description">
        - 21 Speed Shimano Shifting system ensure you to brakes for safety at any speed.\n
        - Dual Disc brake provided great stopping power.\n
        - Excellent off-road flexibility.
    </string>

    <string name="item3_name">Misty series 1999</string>
    <string name="item3_price">799.95</string>
    <string name="item3_description">
        - Lightweight hand-built classic diamond steel frame design with an upright riding position designed for urban commuting, leisurely riding, and exercise.\n
        - Equipped with Shimano 7-Speed drivetrain and RevoShift twist shifters for ultimate precision, speed, and control. \n
        - Front and rear Linear Pull brakes to keep you safe and in control of your ride at all times. \n
        - Kenda 700x35C tires grip the ground for a smooth and sure footed ride every time.
    </string>

    <string name="image_desc">image</string>
    <string name="quantity">Add to cart:  </string>
    <string name="initial_quantity">  0</string>
    <string name="add_button"> + </string>
    <string name="remove_button"> - </string>
    <string name="subtotal_title">Subtotal: </string>
    <string name="initial_subtotal"> 0</string>

    <string name="checkout_title">Checkout</string>
    <string name="pretotal">Total before taxes:</string>
    <string name="tps">TPS:</string>
    <string name="tvq">TVQ:</string>
    <string name="total">Total:</string>

    <string name="end_message">Thank you for shopping at Rydel\'s Racing Bikes!</string>

    <string-array name="delivery_choice">
        <item>Express ($50)</item>
        <item>Regular ($10)</item>
        <item>No hurry (FREE)</item>
    </string-array>

    <string name="ok">Checkout</string>
    <string name="cancel">Back</string>
    <string name="delivery_title">Delivery fee:</string>

    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_account">My Account</string>
</resources>
