<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.earljaepal.palisocnicershop.MenuActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_account"
        android:orderInCategory="30"
        android:title="@string/action_account"
        app:showAsAction="ifRoom"
        />
</menu>
