<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#FFEB3B"
            android:fontFamily="monospace"
            android:lineSpacingExtra="12sp"
            android:padding="@dimen/padding"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_title"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:contentDescription="@string/image_desc"
            android:padding="@dimen/padding" />


        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:fontFamily="monospace"
            android:padding="@dimen/padding"
            android:textAlignment="viewStart"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:lineSpacingExtra="4sp"
            android:padding="@dimen/padding"
            android:textAlignment="viewStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="@dimen/padding"
                android:text="@string/quantity"
                android:textSize="18sp" />

            <Button
                android:id="@+id/item_remove"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/remove_button"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:fontFamily="monospace"
                android:text="@string/initial_quantity"
                android:textAlignment="center"
                android:textSize="24sp" />

            <Button
                android:id="@+id/item_add"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/add_button"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subtotal_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subtotal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/padding"
                android:text="@string/subtotal_title"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/initial_subtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/initial_subtotal"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
